assets/css/style.css
/* ... */
#service1 {
    background: rgb(255,255,255);
    background: linear-gradient(360deg, rgba(255,255,255,1) 92%, rgba(27, 94, 32, 1) 100%);
}

#service2 {
    margin: 20px 0;
    background: rgb(255,255,255);
    background: linear-gradient(360deg, rgba(255,255,255,1) 92%, rgba(255,193,7,1) 100%);
}

#service3 {
    background: rgb(255,255,255);
    background: linear-gradient(360deg, rgba(255,255,255,1) 92%, rgba(33,150,243,1) 100%);
}

/* End Services Section*/

/* Testimonials Section*/


.testimonials-container {
    width: 280px;
}

.testimonials-container blockquote {
    margin: 32px 0;
    padding: 0 1em;
}

#testimonial-name, #testimonial-company {
    display: block;
    font-weight: bold;
}

/* End Testimonials Section*/

/* About Section */

#about-container {
    width: 280px;
    padding: 0 1em;
}

#about-image-container {
    background: url('../images/matthew-shepherd-140.webp') no-repeat center center;    
    width: 140px;
    height: 140px;
    border-style: solid;
    border-color: #ccc;
    border-width: 1px;
    border-radius: 50%;
    margin: 1.5em auto 0 auto;
}

#about-image-bg {
    height: 100%;
    border-radius: 50%;
    background-size: contain;
}

/* End About Section */

/* Contact Section */

#connect-container {
    width: 280px;
    padding-bottom: 1.5em;
}

.social-link {
    display: inline-block;
    min-width: 250px;
    text-align: left;
}

.social-link a:link, .social-link a:visited, .social-link a:active {
    color: #333;
    text-decoration: none;
    margin-right: 1em;
}

.social-link img {
    position: relative;
    top: 12px;
    margin-right: 12px;
    filter: drop-shadow(5px 5px 5px #333);
}

.form-container {
    background-color: rgba(60, 60, 60, 0.2);
    display:flex;
    flex-direction: column;
    border-radius: 25px;
    padding: 2em 1.5em;
    margin-top: 1.5em;    
    width: 280px;
    flex: 1 1 440px;
    justify-content: space-between;
    align-items: center;    
}

.form-container form {
    text-align: left;
    width: 95%;
}

.form-center, .form-container label {
   display: block; 
}

.form-center {
    text-align: center;
}

.form-center .cta-btn {
    margin: 0;
}

.form-container .text-field {
    color: black;
    height: 25px;
    width: 100%;
    margin: 5px 0 20px 0;
    border: 1px solid #fafafa;
    border-radius: 15px; 
    padding: 0 0.5em;    
}

.form-container .textarea-field {
    color: black;
    height: 10em;
    width: 100%;
    margin: 5px 0 20px 0;
    border: 1px solid #fafafa;
    border-radius: 15px;
    padding: 0.5em 0.5em;
}

/* End Contact Section */

/* Footer Section */

footer {
    background: #005c10;
}

footer > div {
    text-align: center;
}

footer li {
    list-style-type: none;
    margin-bottom: 1.5em;    
}

footer li a {
    color: #fff;
    text-decoration: none;
}

footer li a:hover {
    color: #fff;
    text-decoration: underline;
}

#footer-top .cta-btn {
    margin-bottom: 1.5em;
}

#logo-tagline, #footer-bottom, #footer-connect {
    color: #fff;
}

#logo-tagline img {
    margin-bottom: 1.5em;
}

#footer-links, #footer-connect {
    border-top: 1px solid #fff;
}

#footer-top {
    display: flex;
    flex-direction: row;    
    width: 85%;
    padding: 0 0 1.5em 0;
    flex-wrap: wrap;
    column-gap: 3.5em;
}

#logo-tagline, #footer-nav {
    display: flex;
    flex-direction: column;
    flex: 1;
}

#footer-links, #footer-connect {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    flex-wrap: wrap;
}

#footer-links {
    text-align: right;
}

#footer-links, #connect-left-block {
    padding-top: 1.5em;
}

#connect-left-block, #connect-right-block {
    flex: 1 1 33.33%;
}

#links-left-block {
    flex: 0;
}

#links-right-block {
    min-width: 280px;
    flex: 1 1 66.67%;
    text-align: center;    
}

#connect-left-block, #connect-right-block {
    text-align: center;
}

#connect-middle-block {
    flex: 0;
}

#connect-right-block {
    min-width: 280px;
}

#footer-connect h3 {
    font-weight: normal;
}

#footer-connect .social-link a:link, #footer-connect .social-link a:visited, #footer-connect .social-link a:active {
    color: #fff;
    text-decoration: none;
}

#footer-bottom {
    width: 100%;
    padding: 1.5em 0 0 0;
    border-top: 1px solid #fff;
}

#footer-bottom .social-icon {
    margin-right: 1.5em;
}

#footer-bottom .social-icon img {
    filter: drop-shadow(5px 5px 5px #000);
}
/* ... */

